adjusting page width and font size

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,4 +28,4 @@
 <div id="wrap">
   {% include navbar.html %}
 
-  <div class="container-fluid" id="content">
+  <div class="container" id="content">
