--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -18,6 +18,360 @@
     padding: 3px 5px !important;
     vertical-align: top;
 }
-.s_Zebrafish.t_Cohort .c_RID {
-    min-width: 300px
+
+/* ---------- curation status and record status ---------- */
+.markdown-container .status-yellow {
+    color:darkblue;
+    background-color:rgba(225, 230, 37, 0.68);
+    padding:5px;
+    border-radius:10px;
+    display: inline-block;
+    margin: 2px;
+}
+
+/* record status: detail context
+*/
+.markdown-container .record-Incomplete {
+    color:darkblue;
+    background-color:rgba(221, 170, 146, 0.68);
+    padding:5px;
+    border-radius:10px;
+    display: inline-block;
+    margin: 2px;
+}
+
+.markdown-container .record-Complete {
+    color:darkblue;
+    background-color:rgba(113, 195, 129, 0.68);
+    padding:5px;
+    border-radius:10px;
+    display: inline-block;
+    margin: 2px;
+}
+
+/* -- record status: compact context */
+.markdown-container .record-Complete-compact, .markdown-container .record-Incomplete-compact {
+    padding-left: 17px;
+    position: relative;
+}
+
+.markdown-container .record-Complete-compact:before, .markdown-container .record-Incomplete-compact:before {
+    content: "";
+    left: 0px;
+    top: 2px;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.markdown-container .record-Complete-compact:before {
+    background-color: rgba(113, 195, 129, 0.68);
+}
+
+.markdown-container .record-Incomplete-compact:before {
+    background-color: rgba(221, 170, 146, 0.68);
+}
+
+/* -- Execution status: detail context */
+
+.markdown-container .Execution_Status-Success {
+    color:darkblue;
+    background-color:rgba(113, 195, 129, 0.68);
+    padding:5px;
+    border-radius:10px;
+    display: inline-block;
+    margin: 2px;
+}
+
+.markdown-container .Execution_Status-Error {
+    color:darkblue;
+    background-color:rgba(221, 170, 146, 0.68);
+    padding:5px;
+    border-radius:10px;
+    display: inline-block;
+    margin: 2px;
+}
+
+/* -- Execution status: compact context */
+
+.markdown-container .Execution_Status-Success-compact, .markdown-container .Execution_Status-Error-compact {
+    padding-left: 17px;
+    position: relative;
+}
+
+.markdown-container .Execution_Status-Success-compact:before, .markdown-container .Execution_Status-Error-compact:before {
+    content: "";
+    left: 0px;
+    top: 3.5px;
+    width: 10.5px;
+    height: 10.5px;
+    position: absolute;
+}
+
+.markdown-container .Execution_Status-Success-compact:before {
+    background-color: rgba(113, 195, 129, 0.68);
+}
+
+.markdown-container .Execution_Status-Error-compact:before {
+    background-color: rgba(221, 170, 146, 0.68);
+}
+
+/* -- curation status: detail context   */
+.markdown-container .curation-Release, .markdown-container .curation-In-Preparation, .markdown-container .curation-PI-Review, .markdown-container .curation-Submitted, .markdown-container .curation-Amendement, .markdown-container .curation-Data-Hub-Attention, .markdown-container .curation-Data-Hub-Processing, .markdown-container .curation-Biocurator-Review, .markdown-container .curation-Release {
+    color:darkblue;
+    padding:5px;
+    border-radius:10px;
+    display: inline-block;
+    margin: 2px;
+}
+
+.markdown-container .curation-Release {
+    background-color:rgba(113, 195, 129, 0.68);
+}
+
+.markdown-container .curation-In-Preparation, .markdown-container .curation-PI-Review, .markdown-container .curation-Submitted, .markdown-container .curation-Amendement {
+    background-color:rgba(221, 170, 146, 0.68);
+}
+
+.markdown-container .curation-Data-Hub-Attention, .markdown-container .curation-Data-Hub-Processing, .markdown-container .curation-Biocurator-Review, .markdown-container .curation-Release {
+    background-color:rgba(220, 220, 220, 0.68);
+}
+
+/* -- detail status: compact context */
+.markdown-container .curation-In-Preparation-compact, .markdown-container .curation-PI-Review-compact, .markdown-container .curation-Submitted-compact, .markdown-container .curation-Data-Hub-Attention-compact, .markdown-container .curation-Data-Hub-Processing-compact, .markdown-container .curation-Biocurator-Review-compact, .markdown-container .curation-Amendement-compact, .markdown-container .curation-Release-compact {
+    padding-left: 17px;
+    position: relative;
+}
+
+.markdown-container .curation-In-Preparation-compact:before, .markdown-container .curation-PI-Review-compact:before, .markdown-container .curation-Submitted-compact:before, .markdown-container .curation-Data-Hub-Attention-compact:before, .markdown-container .curation-Data-Hub-Processing-compact:before, .markdown-container .curation-Biocurator-Review-compact:before, .markdown-container .curation-Amendement-compact:before, .markdown-container .curation-Release-compact:before {
+    content: "";
+    left: 0px;
+    top: 2px;
+    width: 14px;
+    height: 14px;
+    border-radius: 50%;
+    position: absolute;
+}
+
+.markdown-container .curation-Release-compact:before {
+    background-color: rgba(113, 195, 129, 0.68);
+}
+
+.markdown-container .curation-In-Preparation-compact:before, .markdown-container .curation-PI-Review-compact:before, .markdown-container .curation-Submitted-compact:before, .markdown-container .curation-Amendement-compact:before {
+    background-color: rgba(221, 170, 146, 0.68);
+}
+
+.markdown-container .curation-Data-Hub-Attention-compact:before, .markdown-container .curation-Data-Hub-Processing-compact:before, .markdown-container .curation-Biocurator-Review-compact:before {
+    background-color: rgba(220, 220, 220, 0.68);
+}
+
+/* rules added after Custom CSS table styling changes */
+
+/*
+th.c_NCBI_Symbol {
+    max-width: 60px;
+}
+*/
+
+th.c_RID, th.c_pihgZwBSl3FPLqaL930bEQ {
+  min-width: 70px;
+}
+
+th.c_Name, th.c_RiVpWTIeIaZbB_Bj8cgg1A {
+  min-width: 300px;
+}
+
+th.c_Reference_Image, th.c_8HFVaLlTUqBDa0dfgwS2oQ {
+  width: 320px;
+}
+
+/* for Common:Gene/NCBI_GeneID */
+
+th.c_Images {
+  min-width: 500px;
+}
+
+/* ------------- for protocol recordset ------------- */
+th.c_Title {
+    min-width: 300px;
+}
+
+th.c_Authors, th.c_Subjects {
+    min-width: 150px;
+}
+
+th.c_Abstract {
+    min-width: 300px;
+}
+
+th.c_Description {
+    min-width: 250px;
+}
+
+/* functional assay handbook: recordset Kidney_Structure */
+.s_Protocol.t_Functional_Assay_Handbook th.c_eCxLGxca3Sb15xdLhGsqIw {
+    min-width: 250px;
+}
+
+/* functional assay handbook: recordset Protocol */
+.s_Protocol.t_Functional_Assay_Handbook th.c_L5UlHcXviVZuqOZK8_0C9g {
+    min-width: 250px;
+}
+
+/* functional assay handbook: recordset Notes */
+.s_Protocol.t_Functional_Assay_Handbook th.c_Notes {
+    min-width: 150px;
+}
+
+/* -------------------- collection ----------------------- */
+.s_Common.t_Collection .c_Title {
+    min-width: 200px;
+}
+
+.s_Common.t_Collection .c_Description {
+    min-width: 400px;
+}
+
+/* ------------------ RNASeq ----------------------------- */
+
+.s_RNASeq.t_Study .c_Title {
+    min-width: 200px;
+}
+
+/* for fk:  .s_RNASeq.t_Study .c_EqyGo9mnH_Qa7Mlm3KTe6Q {
+*/
+.s_RNASeq.t_Study .c_Is_Protected_Human_Subject {
+    /* unsetting `white-space` will cause the column heading to wrap as much as possible
+     * "Is Protected Human Subject" becomes 4 lines
+     * causing all column headings to expand for consistency
+     */
+    white-space: unset;
+    /* setting a min-width so the column name spans 3 lines   */
+    min-width: 100px;
+}
+
+/* Study: recordset Summary */
+.s_RNASeq.t_Study th.c_zJcJjeXUmXiDZ0ZJ8xy91Q {
+    min-width: 160px;
+}
+
+/* Study: recordset SC Visualizations
+    - image height 120: 230 px
+*/
+.s_RNASeq.t_Study th.c_6m7yF9m3jgul0CdV_h8HHA {
+    min-width: 230px;
+}
+
+/* Study:Cellbrowser_URI: indent iframe */
+.r_s_RNASeq.r_t_Study #row-Cellbrowser_URI .entity-value {
+  padding-left: 40px;
+}
+
+/* Study:TPM_Visualization: indent iframe */
+.r_s_RNASeq.r_t_Study #row-TPM_Visualization .entity-value {
+  padding-left: 40px;
+}
+
+/* Study column anywhere else */
+th.c_Study {
+    min-width: 250px;
+    max-width: 400px;
+}
+
+/* Experiment: recordset > Species col */
+.s_RNASeq.t_Experiment th.c_EMoy29MZtQoMN6lfyBmOpg {
+    min-width: 120px;
+}
+
+/* Experiment: recordset > Anatomy col */
+.s_RNASeq.t_Experiment th.c_XTSjYvdTD-m2hneo8iFnLQ {
+    min-width: 130px;
+}
+
+.s_RNASeq.t_Visualization .c_Description {
+    width: 200px;
+}
+
+/* sc Visualization: Gene (based on column position). Will change this to name after model change */
+.s_RNASeq.t_Visualization th:nth-child(3) {
+   width: 100px;
+}
+
+/* sc Visualization: Result Files*/
+.s_RNASeq.t_Visualization th.c_Vzdt5ev_bxjQVcP7qJ7LLw {
+    width: 200px;
+    max-width: 250px;
+}
+
+/* sc Visualization: images */
+.s_RNASeq.t_Visualization th.c_Bm8HSG9Sti7-33403ocxNQ {
+    min-width: 250px;
+    /*min-width: 660px;     */
+}
+
+/* sc Visualization: images */
+.s_RNASeq.t_Replicate th.c_WgB3TDveAleh-l5gXHfbKg {
+    min-width: 120px;
+}
+
+
+
+/* ---------------- gene ----------------------- */
+/* search Genes recordset */
+
+#rs-Gene th.c_Description {
+  min-width: 100px;
+}
+
+/* Common.Gene Thumbnail display generated using psudo-column and rowname */
+a.pseudo-column-rowname-thumbnail-link {
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+span.pseudo-column-rowname-thumbnail-title {
+    display: block;
+    height: 10px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+img.centered-image-compact, img.centered-content-compact {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+
+/* ------ Gene Expression: Specimen----------- */
+
+.s_Gene_Expression.t_Specimen .c_Images {
+    min-width: 500px;
+}
+
+.s_Gene_Expression.t_Specimen th.c_Specimen_Thumbnails {
+    min-width: 500px;
+}
+
+/* -- Specimen: Imaging Data -- */
+.s_Gene_Expression.t_Specimen th.c_kX95FYSJ1GTOIXdvVWOwng {
+    min-width: 200px;
+}
+
+/* ------ Gene Expression: indent iframe -------------------------                                                                                                        
+ tables: Image, Image_3D, Processd_3D_Image 
+         Image_Annotation, Image_Annotation_File                                                                                                         
+*/                                                                                                                                                                        
+.r_s_Gene_Expression.r_t_Image #row-uri .entity-value,                                                                                                                   \
+.r_s_Gene_Expression.r_t_Image_3D #row-lRpelvft99Dx7_YwQPuSpw .entity-value,   
+.r_s_Gene_Expression.r_t_Image_3D #row-Processed_File_URL .entity-value,
+.r_s_Gene_Expression.r_t_Processed_3D_Image #row-File_URL .entity-value,
+.r_s_Gene_Expression.r_t_Image_Annotation_File #row-\$Preview .entity-value,                                                                                             \
+.r_s_Gene_Expression.r_t_Image_Annotation #row-\$Display .entity-value                                                                                                    
+{
+  padding-left: 40px;
 }
