updating footer, adding styles for thumbnails in recordset

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,32 +4,40 @@
 <div id="footer">
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-2 col-md-2">
-				<a href="https://www.psc.edu/">
-					<img src="/assets/img/PSClogo.jpg" alt="Logo of the Pittsburgh Super Computing Center" height="50px" style="padding-top:10px">
-				</a>
-
-
-			</div>
-			<div class="col-sm-2 col-md-2">
-				<a href="https://www.isi.edu/">
-					<img src="/assets/img/Informal_Viterbi_CardOnBlack.jpg" alt="Logo for NIH" height="50px" >
-				</a>
-			</div>
-			<div class="col-sm-4 col-md-4">
+			<div class="col-sm-12 col-md-12">
 				<p><a href="/about/">About</a> | <a href="/privacy-policy/">Privacy</a> | <a href="/contact/">Contact</a></p>
+				<p>Supported by grant <strong>1U24DK135157</strong> from the <a href="https://www.niddk.nih.gov/" target="_blank">National Institute of Diabetes and Digestive and Kidney Diseases</a></p>
 			</div>
-			<div class="col-sm-2 col-md-2">
-
+		</div>
+		<div class="row acks">
+			<div class="ack-logo">
+				<a href="https://www.isi.edu/">
+					<img src="/assets/img/Informal_Viterbi_CardOnBlack.jpg" alt="Logo for USC Viterbi" height="40px" >
+				</a>
+			</div>
+			<div class="ack-logo">
+				<a href="https://www.psc.edu/">
+					<img src="/assets/img/PSClogo.jpg" alt="Logo of the Pittsburgh Super Computing Center" height="40px">
+				</a>
+			</div>
+			<div class="ack-logo">
+				<a href="https://www.brighamandwomens.org/">
+					<img src="/assets/img/BrighamHealth_BWH.png" alt="Logo of Brigham and Women's Hospital" height="50px">
+				</a>
+			</div>
+			<div class="ack-logo">
+				<a href="https://hms.harvard.edu/">
+					<img src="/assets/img/harvard-teaching-logo.jpeg" alt="Logo of Harvard Medical Teaching College" height="40px">
+				</a>
+			</div>
+			<div class="ack-logo">
+				<a href="https://wustl.edu/">
+					<img src="/assets/img/washu-logo.png" alt="Logo of WashU" height="60px">
+				</a>
+			</div>
+			<div class="ack-logo">
 				<a href="http://deriva.isrd.isi.edu/">
 					<img src="/assets/img/deriva-dark-bg.png" alt="Logo of the DERIVA system" height="50px">
-				</a>
-
-
-			</div>
-			<div class="col-sm-2 col-md-2">
-				<a href="#">
-					<img src="#" alt="Logo of BWH and WUSTL" height="50px">
 				</a>
 			</div>
 		</div>
