--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -305,7 +305,7 @@ visibility: hidden;
 /* Footer styles */
 
 #footer {
-	height: 80px;
+	height: 150px;
 	background-color: #000;
 	color: #C1C1C1;
 	padding: 10px;
@@ -326,14 +326,15 @@ visibility: hidden;
 	margin-top: 0;
 }
 
-.gallery {
+.acks {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     margin-bottom: 15px;
+		align-items: center;
 }
 
-.gallery .consortium {
+.acks .ack-logo {
 	width: 215px;
 }
 
