updating styles for cell lines page, foundation for funding section

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -118,6 +118,11 @@ p.note {
   font-weight: bold;
 }
 
+p.acknowledgement {
+	font-size: .9;
+	font-style: italic;
+}
+
 
 #wrap {
 	min-height: 100%;
