--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,8 @@
 {% include header.html %}
+<div class="container" id="home">
+<div class="col-md-12">
+<h2>{{ page.title }}</h2>
 
 {{ content }}
-
+</div>
 {% include footer.html %}
