--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -45,13 +45,13 @@ html,body {
 }
 
  h1, h2, h3 {
-  margin-top: 40px;
   margin-bottom: 20px;
 }
 
-h2, .h2 {
+#content h2, #home h2 {
 	font-size: 30px;
 	font-weight: 400;
+	margin-top: 40px;
 }
 
 h3 {
