--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script src="/gtm-id.js"></script>
+    
     <meta charset="utf-8">
     <title>{{ page.title }} | {{ site.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +26,7 @@
  Here are the <a href="http://www.enable-javascript.com/" target="_blank">
  instructions how to enable JavaScript in your web browser</a>.</p>
 </noscript>
+
 </head>
 <body>
 <div id="wrap">
