--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Google Tag Manager -->
     <script src="/gtm-id.js"></script>
-    
+
     <meta charset="utf-8">
     <title>{{ page.title }} | {{ site.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,9 +13,12 @@
     <script src="/gtm-id.js"></script>
   	<script src="/assets/js/jquery-latest.min.js"></script>
   	<script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/chaise/chaise-config.js"></script>
+<!--    <script src="/chaise/chaise-config.js"></script>
     <script src="/chaise/scripts/vendor/angular.js"></script>
-    <script src="/chaise/lib/navbar/navbar.app.js"></script>
+-->
+  <script src="/chaise/lib/navbar/navbar.dependencies.js"></script>
+  
+    {% include navbar-dependencies.html %}
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 <!--[if lt IE 9]>
