--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,9 @@
   	<script src="/assets/js/bootstrap.min.js"></script>
 <!--    <script src="/chaise/chaise-config.js"></script>
     <script src="/chaise/scripts/vendor/angular.js"></script>
--->
+
   <script src="/chaise/lib/navbar/navbar.dependencies.js"></script>
-  
+-->
     {% include navbar-dependencies.html %}
 
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -33,4 +33,4 @@
 </head>
 <body>
 <div id="wrap">
-  {% include navbar.html %}
+  <navbar></navbar>
