--- a/rebuildingakidney/assets/css/all.sass
+++ b/rebuildingakidney/assets/css/all.sass
@@ -19,7 +19,7 @@ $avatar-path: '{{ site.data.rebuildingakidney.layout.avatar }}'
 // Set some colors as sass variables
 
 $accent: {{ site.data.rebuildingakidney.layout.accent }}
-$accent-light: adjust-hue(saturate(lighten($accent, 11%), 12.6%), 14%)
+$accent-light: adjust-hue(saturate(lighten($accent, 11%), 12.6%), 50deg)
 
 $branding: {{ site.data.rebuildingakidney.layout.branding }}
 $branding-light: {{ site.data.rebuildingakidney.layout.branding-light }}
