updating rebuildingakidney subsite

--- a/_layouts/rbk_projects.html
+++ b/_layouts/rbk_projects.html
@@ -1,5 +1,17 @@
 
 {% include header.html %}
+<link rel="stylesheet" href="/assets/css/rbk.css">
+<div class="rbk-subnav">
+	<a class="rbk-brand" href="/rebuildingakidney/">
+        <img alt="RBK Logo" src="/assets/img/rbk-logo.png">
+      </a>
+			<ul>
+					<li role="presentation"><a href="/rebuildingakidney/about/">About</a></li>
+					<li role="presentation"><a href="/rebuildingakidney/projects/">Projects</a></li>
+					<li role="presentation"><a href="/rebuildingakidney/news/">News</a></li>
+					<li role="presentation"><a href="/rebuildingakidney/contact/">Contact Us</a></li>
+			</ul>
+</div>
 
 <section class="section-work container-full">
 
