--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,5 +8,5 @@
 </div>
 
 {% include footer.html %}
-</div>
+{%- comment -%} </div> {%- endcomment -%}
 <script type="text/javascript" src="/assets/slick/slick.min.js"></script>
