--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,9 @@
 {% include header.html %}
-<div class="container" id="home">
+<div class="container-fluid" id="home">
 <div class="col-md-12">
-<h2>{{ page.title }}</h2>
-
+  <!--
+<h1>{{ page.title }}</h1>
+-->
 {{ content }}
 </div>
 {% include footer.html %}
