--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -135,8 +135,8 @@ p.acknowledgement {
 }
 
 .navbar-inverse {
-    background-color: #255F8C;
-    border-color: #255F8C;
+    background-color: #0A2327;
+    border-color: #0A2327;
 }
 
 @media (min-width: 768px) {
