--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,6 @@
   <head>
     <!-- Google Tag Manager -->
     <script src="/gtm-id.js"></script>
-
     <meta charset="utf-8" />
     <title>{{ page.title }} | {{ site.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,37 +12,96 @@
       rel="stylesheet"
       type="text/css"
       href="/assets/css/bootstrap.min.css"
-    />
-
+      />
     <link rel="stylesheet" type="text/css" href="/assets/slick/slick.css" />
     <link
       rel="stylesheet"
       type="text/css"
       href="/assets/slick/slick-theme.css"
-    />
+      />
     <link rel="stylesheet" type="text/css" href="/assets/css/custom.css" />
-
     <script src="/assets/js/jquery-latest.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <!--    <script src="/chaise/chaise-config.js"></script>
-    <script src="/chaise/scripts/vendor/angular.js"></script>
--->
+      <script src="/chaise/scripts/vendor/angular.js"></script>
+      -->
     {% include navbar-dependencies.html %}
-
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script>
+      function search(searchParam, searchText) {
+      	searchParam = typeof searchParam === "string" ? searchParam : "";
+      	switch(searchParam){
+      		case 'anatomy':
+      			schemaName = 'Vocabulary';
+      			tableName = 'Anatomy';
+      			break;
+      		case "species":
+      			schemaName = 'Vocabulary';
+      			tableName = 'Species';
+      			break;
+      		case 'proteins':
+      			schemaName = 'Common';
+      			tableName = 'Protein';
+      			break;
+      		case "gene":
+      		default: // all
+      			schemaName = 'Common';
+      			tableName = 'Gene';
+      			break;
+      	}
+      
+      	// the origin of webstie.
+      	var origin = window.location.protocol + "//" + window.location.hostname + (window.location.port ? ':' + window.location.port : '');
+      	var pathArray = [origin, 'chaise', 'recordset'];
+      
+      	// TODO this "if" case should be removed when the search-box annotation
+      	//      is applied to customize the columns in the search box.
+      	if (searchParam === "gene" || searchParam == "species") {
+      		var columnName = (searchParam === "gene") ? "NCBI_Symbol" : "Name";
+      
+      		var path = ERMrest.createPath("2", schemaName, tableName);
+      		pathArray.push(path);
+      		if (typeof searchText === "string" && searchText.trim().length > 0) {
+      			// create custom filter
+      			var query = columnName + "::ciregexp::" + searchText.trim() + ";Synonyms::ciregexp::" + searchText.trim();
+      			pathArray.push(query);
+      		}
+      
+      	} else {
+      		var facets;
+      		if (typeof searchText === "string" && searchText.trim().length > 0) {
+      			// create the facet object so we can pass it to ermrestjs
+      			facets = {
+      				"and": [{ "sourcekey": "search-box", "search": [searchText.trim()] }]
+      			};
+      		}
+      
+      		// create a path that chaise understands
+      		var path = ERMrest.createPath("2", schemaName, tableName, facets);
+      		pathArray.push(path);
+      	}
+      
+      	// create the url to open
+      	var finalURL = pathArray.join("/") + "?pcid=static/home/search";
+      
+      	// open the url
+      	window.open(finalURL);
+      }
+       
+    </script>
     <noscript>
       <p class="bg-warning">
         For full functionality of this site it is necessary to enable
         JavaScript. Here are the
         <a href="http://www.enable-javascript.com/" target="_blank">
-          instructions how to enable JavaScript in your web browser</a
-        >.
+        instructions how to enable JavaScript in your web browser</a
+          >.
       </p>
     </noscript>
   </head>
   <body>
     <div id="wrap">
-      <navbar></navbar>
+    <navbar></navbar>
