#31 minor logo styling fixes

--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -75,6 +75,8 @@ span#brand-text {
 
 #chaise-app-root span#brand-text {
     background: url(/assets/img/logo-cropped-for-chaise.png);
+    background-size: 100%;
+    height: 33px;
 }
 
 ul.nav.navbar-nav.navbar-right {
