--- a/assets/css/chaise.css
+++ b/assets/css/chaise.css
@@ -6,7 +6,7 @@
 .navbar {
     /*min-height: 70px;*/
     margin: 0 auto;
-    padding: 10px;
+  /*  padding: 10px; */
     width: 100%;
     font-size: 16px;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
