working on gudmap content

--- a/_layouts/gudmap-sub.html
+++ b/_layouts/gudmap-sub.html
@@ -10,7 +10,9 @@
 					<li role="presentation"><a href="/gudmap/contact/">Contact Us</a></li>
 			</ul>
 </div>
-
+<div class="container" id="content">
+<div class="col-md-12">
+	<h2>{{ page.title }}</h2>
 
 		{{ content }}
 
