adjusting styles in navbar, adding placeholder

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -105,4 +105,6 @@
   </head>
   <body>
     <div id="wrap">
-    <navbar></navbar>
+      <navbar>
+          <img src="/assets/img/atlas-logo-inverted.png" alt="" style="width:120px;height:83px;margin-top:15px;margin-left:20px;">
+      </navbar>
