--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,13 +1,13 @@
-/* Using image for brand in navbar
-Comment out the next two rules to use text instead
-*/
 
-.navbar-brand {
-    float: left;
-    height: 50px;
-    padding: 15px 15px;
-    font-size: 18px;
-    line-height: 20px;
+
+/* Styles for placeholder navbar - before navbar kicks in */
+
+navbar {
+    height: 102px;
+    background-color: #0A2327;
+    display: block;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 
@@ -734,7 +734,7 @@ a {
 /* Slick Styles */
 
 .image-carousel {
-    height: 100%;
+  /*  height: 100%; */
     display: block;
     margin-bottom: 30px;
     margin-left: 15px;
