--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -49,9 +49,10 @@ body {
 }
 
 .content {
-    min-height: 100%;
+    /* min-height: 100%; */
     position: relative;
     padding-top: 70px;
+    padding-bottom: 60px;
 }
 
 h1,
@@ -202,6 +203,10 @@ p.acknowledgement {
     margin-top: 0;
     text-align: left;
     padding-bottom: 0;
+}
+
+p.cta {
+    padding-top: 10px;
 }
 
 #events h4 {
@@ -474,7 +479,7 @@ ul.posts li time {
     color: #C1C1C1;
     padding: 10px;
     text-align: center;
-    margin-top: 60px;
+/*    margin-top: 60px; */
 }
 
 #footer a {
@@ -766,6 +771,7 @@ ul.posts li time {
 
 a {
     text-decoration: none !important;
+    color: #428bca;
 }
 
 
