--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -374,7 +374,7 @@ a.tooltiplink:hover span {
 
 /* News, Events, consortium Ads */
 
-#news, #consortiums {
+#news-atlas, #consortiums {
   border-right: 1px solid #CCC;
 }
 
@@ -441,13 +441,15 @@ ul.posts li time {
 
 #content.container {
     padding-bottom: 50px;
-    width: 820px;
+    max-width: 1100px;
 }
 
 .innercontent {
-    padding: 20px 10%;
-    font-size: 1.2em;
+  /*  padding: 20px 10%; */
+    max-width: 850px;
+/*    font-size: 1.2em; */
     line-height: 1.5;
+    margin: 0 auto;
 }
 
 
@@ -471,6 +473,121 @@ ul.posts li time {
     background-color: #d1353b;
 }
 
+
+/* Tutorials - styles originally from GUDMAP */
+
+.well {
+  margin-top: 20px;
+}
+
+.flyer.well {
+  margin-top: 0;
+  margin-left: 15px;
+}
+
+div.tutorial-pages {
+    font-size: 18px;
+    line-height: 1.5;
+    max-width: 1000px;
+}
+
+.video-well {
+    background-color: #f0f0f0;
+    padding: 15px;
+    margin-bottom: 15px;
+
+}
+
+.video-well video {
+  display: block;
+}
+
+ul.subpage {
+  padding-bottom: 20px;
+}
+
+ul.subpage li {
+  margin-top: 0;
+}
+
+.tutorial-img {
+  max-width: 750px;
+}
+
+.figcaption {
+  padding-bottom: 20px;
+}
+
+/* Documentation pages */
+
+.callout td {
+  vertical-align: top;
+  padding-top: 15px;
+  padding-right: 15px;
+}
+
+img.screenshot {
+  width: 800px;
+  border: 1px #CCC solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+img.screenshot-sm {
+  width: 600px;
+  border: 1px #CCC solid;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+figure {
+    padding-bottom: 20px;
+}
+
+figcaption {
+    font-style: italic;
+    line-height: 1.25;
+    padding-top: 15px;
+}
+
+div.pagination, div.tutorial-series {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+div.pagination div, div.tutorial-series div {
+  flex-grow: 1;
+}
+
+
+div.next-topic {
+text-align: right;
+}
+
+div.5A5B {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+div.bottom-img {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+div.bottom-img img {
+  width: 470px;
+}
+
+.tutmd {
+  width: 520px;
+}
+
+.tutsm {
+  max-width: 370px;
+}
 
 /* Footer styles */
 
