--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -67,6 +67,11 @@ h3 {
     margin-top: 40px;
 }
 
+#content .news h2 {
+  font-size: 20px;
+  margin-top: 30px;
+}
+
 h3 {
     padding-top: 20px;
 }
