--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,8 @@
 {% include header.html %}
 <div class="container" id="content">
 <div class="col-md-12">
+	{% include breadcrumb.html %}
+	
 	<h1>{{ page.title }}</h1>
 
 		{{ content }}
