--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -61,6 +61,10 @@ h3 {
     margin-bottom: 20px;
 }
 
+#content h1, #home h1 {
+  margin-top: 30px;
+}
+
 #content h2,
 #home h2 {
     font-size: 30px;
@@ -882,16 +886,17 @@ div.bottom-img img {
     }
 }
 
-.breadcrumb {
-    padding: 8px 15px !important;
-}
-
 .breadcrumb * {
     padding-right: 5px;
     padding-left: 5px;
 }
 
-a {
+#breadcrumbs {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+#content a, #home a {
     text-decoration: none !important;
     color: #428bca;
 }
