--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -74,11 +74,11 @@ h3 {
   font-size: 20px;
   margin-top: 20px;
 }
-
+/*
 h3 {
     padding-top: 20px;
 }
-
+*/
 h3.panel-title {
     padding-top: 0px;
 }
