--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -54,12 +54,13 @@ body {
     padding-top: 70px;
     padding-bottom: 60px;
 }
-
+/*
 h1,
 h2,
 h3 {
     margin-bottom: 30px;
 }
+*/
 
 #content h1, #home h1 {
   margin-top: 20px;
