standardizing layouts and subnavs in subsites

--- a/_layouts/gudmap/default.html
+++ b/_layouts/gudmap/default.html
@@ -5,9 +5,10 @@
         <img alt="gudmap Logo" src="/assets/img/gudmap-logo.svg">
       </a>
 			<ul>
-					<li role="presentation"><a href="/gudmap/about/">About</a></li>
-					<li role="presentation"><a href="/gudmap/projects/">Projects</a></li>
-					<li role="presentation"><a href="/gudmap/contact/">Contact Us</a></li>
+				<li role="presentation"><a href="/gudmap/about/">About</a></li>
+				<li role="presentation"><a href="/gudmap/projects/">Projects</a></li>
+				<li role="presentation"><a href="/gudmap/citing-gudmap/">Citing GUDMAP</a></li>
+				<li role="presentation"><a href="/gudmap/contact/">Contact GUDMAP</a></li>
 			</ul>
 </div>
 
