--- a/_layouts/gudmap/home.html
+++ b/_layouts/gudmap/home.html
@@ -7,7 +7,8 @@
 			<ul>
 					<li role="presentation"><a href="/gudmap/about/">About</a></li>
 					<li role="presentation"><a href="/gudmap/projects/">Projects</a></li>
-					<li role="presentation"><a href="/gudmap/contact/">Contact Us</a></li>
+					<li role="presentation"><a href="/gudmap/citing-gudmap/">Citing GUDMAP</a></li>
+					<li role="presentation"><a href="/gudmap/contact/">Contact GUDMAP</a></li>
 			</ul>
 </div>
 
