--- a/_layouts/rbk/projects.html
+++ b/_layouts/rbk/projects.html
@@ -9,7 +9,7 @@
 					<li role="presentation"><a href="/rebuildingakidney/about/">About</a></li>
 					<li role="presentation"><a href="/rebuildingakidney/projects/">Projects</a></li>
 					<li role="presentation"><a href="/rebuildingakidney/citing/">Citing RBK</a></li>
-					<li role="presentation"><a href="/rebuildingakidney/contact/">Contact Us</a></li>
+					<li role="presentation"><a href="/rebuildingakidney/contact/">Contact RBK</a></li>
 			</ul>
 </div>
 
